clusters/home/apps/network/tunnels/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tunnels
  labels:
    goldilocks.fairwinds.com/enabled: "true"
